# learning_rust

./: .markdownlint.yaml  CNAME  LICENSE  README.md  book.toml
code/: .pre-commit-config.yaml  Cargo.toml  Makefile
code/advanced_fn/: Cargo.toml
code/advanced_fn_closure/: Cargo.toml
code/advanced_trait_animal/: Cargo.toml
code/advanced_trait_counter/: Cargo.toml
code/advanced_trait_fly/: Cargo.toml
code/advanced_trait_meter/: Cargo.toml
code/advanced_trait_never_type/: Cargo.toml
code/advanced_trait_newtype/: Cargo.toml
code/advanced_trait_ops/: Cargo.toml
code/advanced_trait_outline/: Cargo.toml
code/advanced_trait_type/: Cargo.toml
code/ch_struct/: Cargo.toml
code/collection_map/: Cargo.toml
code/collection_string/: Cargo.toml
code/collection_vector/: Cargo.toml
code/concurrent_channel/: Cargo.toml
code/concurrent_more_producer/: Cargo.toml
code/concurrent_more_tx/: Cargo.toml
code/concurrent_move/: Cargo.toml
code/concurrent_mutex/: Cargo.toml
code/concurrent_mutex_thead/: Cargo.toml
code/concurrent_thread/: Cargo.toml
code/control_if/: Cargo.toml
code/enum_concept/: Cargo.toml
code/error_panic/: Cargo.toml
code/error_prop/: Cargo.toml
code/error_prop_simple/: Cargo.toml
code/error_result/: Cargo.toml
code/example_serde/: Cargo.toml
code/example_serde_attr_container/: Cargo.toml
code/functional_give_shirt/: Cargo.toml
code/functional_only_borrow/: Cargo.toml
code/functional_sort/: Cargo.toml
code/generics_largest/: Cargo.toml
code/generics_method/: Cargo.toml
code/generics_mixup/: Cargo.toml
(+227 files in other folders)
