[workspace]
resolver = "3"
members = [ "array", "ch_struct", "control_if", "data_type", "functions","hello_world", "loop_for", "loop_label", "loop_while", "loops", "ownership_func", "ownership_ref", "ownership_return", "ownership_slice",  "ownership_string", "ownership_var", "shadowing", "tuple", "var/*"]
